cmake_minimum_required(VERSION 3.17)
project(Myplot)

set(CMAKE_CXX_STANDARD 14)

add_executable(Myplot
        canvas.cpp
        main.cpp
        plot.cpp
        tempCodeRunnerFile.cpp
        func1.cpp
        func2.cpp
        func3.cpp
        func4.cpp
        func5.cpp
        func6.cpp
        axis.cpp)
